src/components/CodeBox.module.less
.codeBox {
  margin-top: 0px;
  margin-bottom: 14px;
}

.codeBoxSegment {
  overflow: hidden;
  padding: 0 !important;
}

.codeBoxContent {
  margin-top: 0;
  margin-bottom: 0;
  padding: 1em 1em;
  height: 100%;
  overflow: auto;
  overflow: overlay;
}

